--- a/demo/demo.html
+++ b/demo/demo.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
+    <script src="angular-1.0.8.min.js"></script>
     <script src="../multiProgress.js"></script>
     <link rel="stylesheet" href="../bootstrap-progress-bar.css" />
     <link rel="stylesheet" href="../multiProgress.css" />
